--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
         shell: bash {0} # Required to check exit code
         run: |
           git fetch origin "$GITHUB_BASE_REF"
-          git diff --exit-code --merge-base "$GITHUB_BASE_REF" "$BICEP_FILE_PATH"
+          git diff --exit-code --merge-base "origin/$GITHUB_BASE_REF" "$BICEP_FILE_PATH"
           exit_code="$?"
           if [[ "$exit_code" == 0 ]]; then
             echo "No changes made to Bicep file. Skipping build."
